// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Backdrop Closedby Any 1`] = `
<button
  data-variant="secondary"
  type="button"
  aria-haspopup="dialog"
>
  Åpne Dialog
</button>
<dialog
  data-modal="true"
  open
>
  <form method="dialog">
    <button
      data-icon="true"
      data-variant="tertiary"
      type="submit"
      aria-label="Lukk dialogvindu"
      data-color="neutral"
      name="close"
    >
    </button>
  </form>
  <h2>
    Dialog med
    <code>
      closedby="any"
    </code>
  </h2>
  <p data-variant="default">
    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
  </p>
  <p
    data-variant="default"
    data-size="sm"
  >
    Dialog footer
  </p>
</dialog>
`;

exports[`Dialog Non Modal 1`] = `
<div style="width: 400px;">
  <label
    data-weight="medium"
    for="textareaundefined"
  >
    Besvarelse
  </label>
  <textarea
    id="textareaundefined"
    rows="8"
  >
  </textarea>
</div>
<button
  data-variant="secondary"
  type="button"
>
  Åpne skrivetips
</button>
<dialog
  data-modal="false"
  open
  style="width: 300px; left: 80%;"
>
  <form method="dialog">
    <button
      data-icon="true"
      data-variant="tertiary"
      type="submit"
      aria-label="Lukk dialogvindu"
      data-color="neutral"
      name="close"
    >
    </button>
  </form>
  <h2 style="margin-bottom: var(--ds-size-2);">
    Hva besvarelsen burde inneholde
  </h2>
  <ul>
    <li>
      intro til prosjektet
    </li>
    <li>
      oversikt over hva som er gjort i prosjektet
    </li>
    <li>
      beskrivelse av prosjektmålene
    </li>
    <li>
      metode for å oppnå prosjektmålene
    </li>
    <li>
      leveranse
    </li>
  </ul>
</dialog>
`;

exports[`Dialog With Form 1`] = `
<button
  data-variant="primary"
  type="button"
  aria-haspopup="dialog"
>
  Send inn skjema
</button>
<dialog
  data-modal="true"
  open
>
  <form method="dialog">
    <button
      data-icon="true"
      data-variant="tertiary"
      type="submit"
      aria-label="Lukk dialogvindu"
      data-color="neutral"
      name="close"
    >
    </button>
  </form>
  <h2 style="margin-bottom: var(--ds-size-2);">
    Skjemainnsending
  </h2>
  <div>
    <label
      data-weight="medium"
      for="components-dialog--dialog-with-form"
    >
      Navn
    </label>
    <div>
      <input
        autofocus="true"
        id="components-dialog--dialog-with-form"
        type="text"
        value
      >
    </div>
  </div>
  <div style="display: flex; gap: var(--ds-size-2); margin-top: var(--ds-size-4);">
    <button
      data-variant="primary"
      type="button"
    >
      Send inn skjema
    </button>
    <button
      data-variant="secondary"
      type="button"
    >
      Avbryt
    </button>
  </div>
</dialog>
`;

exports[`Dialog With Max Width 1`] = `
<button
  data-variant="secondary"
  type="button"
  aria-haspopup="dialog"
>
  Åpne Dialog
</button>
<dialog
  data-modal="true"
  open
  style="max-width: 1200px;"
>
  <form method="dialog">
    <button
      data-icon="true"
      data-variant="tertiary"
      type="submit"
      aria-label="Lukk dialogvindu"
      data-color="neutral"
      name="close"
    >
    </button>
  </form>
  <h2 style="margin-bottom: var(--ds-size-2);">
    Dialog som er veldig bred
  </h2>
  <p data-variant="default">
    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
  </p>
</dialog>
`;

exports[`Dialog With Open Prop 1`] = `
<button
  data-variant="primary"
  type="button"
>
  Open Dialog with prop
</button>
<dialog
  data-modal="true"
  open
>
  <form method="dialog">
    <button
      data-icon="true"
      data-variant="tertiary"
      type="submit"
      aria-label="Lukk dialogvindu"
      data-color="neutral"
      name="close"
    >
    </button>
  </form>
  <p
    data-variant="default"
    data-size="sm"
  >
    Dialog subtittel
  </p>
  <h2 style="margin-bottom: var(--ds-size-2);">
    Dialog header
  </h2>
  <p
    data-variant="default"
    style="margin-bottom: var(--ds-size-2);"
  >
    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
  </p>
  Dialog footer
</dialog>
`;

exports[`Dialog With Suggestion 1`] = `
<button
  data-variant="secondary"
  type="button"
  aria-haspopup="dialog"
>
  Åpne Dialog
</button>
<dialog
  data-modal="true"
  open
  style="overflow: visible;"
>
  <form method="dialog">
    <button
      data-icon="true"
      data-variant="tertiary"
      type="submit"
      aria-label="Lukk dialogvindu"
      data-color="neutral"
      name="close"
    >
    </button>
  </form>
  <div>
    <h2>
      Dialog med innhold utenfor
    </h2>
  </div>
  <div>
    <div>
      <label
        data-weight="medium"
        for="undefined-input"
      >
        Velg en kommune
      </label>
      <u-combobox>
        <input
          placeholder
          id="undefined-input"
          type="text"
          list=":u-datalist1"
          aria-label="Velg en kommune, "
          popovertarget=":u-datalist1"
          aria-autocomplete="list"
          aria-controls=":u-datalist1"
          aria-expanded="true"
          autocomplete="off"
          role="combobox"
        >
        <del
          data-icon="true"
          data-variant="tertiary"
          aria-label="Tøm"
          hidden
          role="button"
        >
        </del>
        <u-datalist
          data-nofilter
          data-sr-singular="%d forslag"
          data-sr-plural="%d forslag"
          popover="manual"
          hidden
          role="listbox"
          tabindex="-1"
          aria-multiselectable="false"
          id=":u-datalist1"
          style="width: 590px; translate: <removed>;"
        >
          <u-option
            label="Sogndal"
            value="Sogndal"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Sogndal
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Oslo"
            value="Oslo"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Oslo
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Brønnøysund"
            value="Brønnøysund"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Brønnøysund
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Stavanger"
            value="Stavanger"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Stavanger
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Trondheim"
            value="Trondheim"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Trondheim
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Bergen"
            value="Bergen"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Bergen
            <div>
              Kommune
            </div>
          </u-option>
          <u-option
            label="Lillestrøm"
            value="Lillestrøm"
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Lillestrøm
            <div>
              Kommune
            </div>
          </u-option>
        </u-datalist>
      </u-combobox>
    </div>
  </div>
  <div style="display: flex; gap: var(--ds-size-2);">
    <button
      data-variant="primary"
      type="button"
    >
      Send inn
    </button>
    <button
      data-variant="secondary"
      type="button"
    >
      Avbryt
    </button>
  </div>
</dialog>
`;

exports[`Preview 1`] = `
<button
  data-variant="primary"
  type="button"
  aria-haspopup="dialog"
>
  Åpne Dialog
</button>
<dialog
  data-modal="true"
  open
>
  <form method="dialog">
    <button
      data-icon="true"
      data-variant="tertiary"
      type="submit"
      aria-label="Lukk dialogvindu"
      data-color="neutral"
      name="close"
    >
    </button>
  </form>
  <h2 style="margin-bottom: var(--ds-size-2);">
    Dialog header
  </h2>
  <p
    data-variant="default"
    style="margin-bottom: var(--ds-size-2);"
  >
    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
  </p>
  <p
    data-variant="default"
    data-size="sm"
  >
    Dialog footer
  </p>
</dialog>
`;

exports[`With Header And Footer 1`] = `
<button
  data-variant="primary"
  type="button"
  aria-haspopup="dialog"
>
  Gå til neste
</button>
<dialog
  data-modal="true"
  open
>
  <form method="dialog">
    <button
      data-icon="true"
      data-variant="tertiary"
      type="submit"
      aria-label="Lukk dialogvindu"
      data-color="neutral"
      name="close"
    >
    </button>
  </form>
  <div>
    <p
      data-variant="default"
      data-size="sm"
    >
      Undertittel
    </p>
    <h2>
      Dette må du vite før du går videre
    </h2>
  </div>
  <div>
    <p
      data-variant="default"
      style="margin-bottom: var(--ds-size-2);"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sodales eros justo. Aenean non mi ipsum. Cras viverra elit nec vulputate mattis. Nunc placerat euismod pulvinar. Sed nec fringilla nulla, sit amet ultricies ante. Morbi egestas venenatis massa, eu interdum leo rutrum eu. Nulla varius, mi ac feugiat lacinia, magna eros ullamcorper arcu, vel tincidunt erat leo nec tortor. Sed ut dui arcu. Morbi commodo ipsum hendrerit est imperdiet imperdiet. Etiam sed maximus nisi. Quisque posuere posuere orci, non egestas risus facilisis a. Vivamus non tempus felis, in maximus lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
    </p>
    <p data-variant="default">
      Etiam nec tincidunt est. Integer semper sodales efficitur. Pellentesque pellentesque varius leo id congue. Integer lacinia porttitor massa id euismod. Maecenas porta, magna nec interdum eleifend, risus magna condimentum neque, a gravida nisl risus a elit. Donec accumsan metus et lectus placerat varius. Donec tristique odio arcu. Donec cursus leo a dui auctor pulvinar. Sed in elit urna. Nunc vitae magna sed nibh elementum dignissim et ut massa.
    </p>
  </div>
  <div>
    Footer
  </div>
</dialog>
`;

exports[`Without Dialog Trigger Context 1`] = `
<button
  data-variant="secondary"
  type="button"
>
  Åpne Dialog
</button>
<dialog
  data-modal="true"
  open
>
  <form method="dialog">
    <button
      data-icon="true"
      data-variant="tertiary"
      type="submit"
      aria-label="Lukk dialogvindu"
      data-color="neutral"
      name="close"
    >
    </button>
  </form>
  <p
    data-variant="default"
    data-size="sm"
  >
    Dialog subtittel
  </p>
  <h2 style="margin-bottom: var(--ds-size-2);">
    Her bruker vi
    <code>
      ref
    </code>
    for å åpne dialogen
  </h2>
  <p
    data-variant="default"
    style="margin-bottom: var(--ds-size-2);"
  >
    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis doloremque obcaecati assumenda odio ducimus sunt et.
  </p>
  Dialog footer
</dialog>
`;
